# explain-source

./: .gitignore  CLAUDE.md  Dockerfile  NEXT_STEPS.md  QUICK_START.md  README.md  demo.md  docker-compose.yml  ecosystem.config.js  middleware.ts  next.config.js  package-lock.json  package.json  run.sh  setup.sh  start-docker.sh  start.sh  stop.sh  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/projects/: page.tsx
app/projects/[projectId]/: page.tsx
app/register/: page.tsx
components/: ChatInterface.tsx  ChatPopup.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LogViewer.tsx  PlanEditor.tsx  ProjectFormDialog.tsx  ProjectList.tsx  TicketDetailDialog.tsx  TicketDetailModal.tsx  TicketFormDialog.tsx  TicketModal.tsx
components/ui/: badge.tsx  card.tsx  dialog.tsx  form.tsx  scroll-area.tsx
hooks/: useSocket.ts
lib/: api.ts
rust-backend/: .env.example  .gitignore  Cargo.toml  ecosystem.config.js  qa-chatbot-backend.service  qa_chatbot.db
rust-backend/migrations/: 001_add_result_message_type.sql  002_add_cancelled_status.sql  003_add_auth_and_plans.sql
rust-backend/src/: agent_factory.rs  api_handlers.rs  auth_middleware.rs  claude_agent.rs  code_agent.rs  cursor_agent.rs  database.rs  gemini_agent.rs  jwt.rs  log_normalizer.rs  main.rs  message_store.rs  websocket_handler.rs
schemas/: chatSchema.ts  ticketSchema.ts
stores/: authStore.ts  chatStore.ts  projectStore.ts  ticketStore.ts  uiStore.ts  websocketStore.ts
types/: ticket.ts
